--- a/contrac.html
+++ b/contrac.html
@@ -32,7 +32,7 @@
         নূরে মদিনা মৎস প্রকল্প সম্পর্কে কিছু জানার থাকলে যোগাযোগ করুন ।
       </h1>
       <div class="owner">
-        <a href="#"
+        <a href="https://www.facebook.com/mdruhulamin.bhuiyan.16"
           ><img src="images/abbu.jpg" alt="Owner Images" class="abbu_img"
         /></a>
       </div>
@@ -75,7 +75,7 @@
           <p class="copyright">Copyright &copy; 2022 নূরে মদিনা মৎস প্রকল্প</p>
         </div>
         <div class="foot_box2">
-          <a href="#"
+          <a href="https://www.facebook.com/mdruhulamin.bhuiyan.16"
             ><img src="images/fb.icon.png" alt="Facebook Icon" class="fb_icon"
           /></a>
         </div>
