--- a/gallery.html
+++ b/gallery.html
@@ -63,7 +63,7 @@
     <div class="foot">
         <div class="foot_box1"><p class="copyright">Copyright &copy; 2022 নূরে মদিনা মৎস প্রকল্প </p></div>
         <div class="foot_box2">
-            <a href="#"><img src="images/fb.icon.png" alt="Facebook Icon" class="fb_icon"></a>
+            <a href="https://www.facebook.com/mdruhulamin.bhuiyan.16"><img src="images/fb.icon.png" alt="Facebook Icon" class="fb_icon"></a>
         </div>
 
     </div>
